[gd_scene load_steps=8 format=3 uid="uid://cd27ojspm1art"]

[ext_resource type="Script" path="res://script/cards/black/ap.gd" id="1_wla5o"]
[ext_resource type="PackedScene" uid="uid://tahtsvfotixd" path="res://scenes/component/health_component.tscn" id="2_vl8vg"]
[ext_resource type="PackedScene" uid="uid://4gn77audskrs" path="res://scenes/component/attack_component.tscn" id="3_1lhjx"]
[ext_resource type="PackedScene" uid="uid://bx028wy2lu25i" path="res://scenes/component/outfit_component.tscn" id="4_wb4rb"]
[ext_resource type="Texture2D" uid="uid://i3o3vdm1fpeu" path="res://img/piece/standerd/black.png" id="5_0h7fh"]
[ext_resource type="PackedScene" uid="uid://c83kbyxqmarvi" path="res://scenes/component/score_component.tscn" id="6_r8b17"]
[ext_resource type="PackedScene" uid="uid://d2lqpgvgq4oh3" path="res://scenes/component/buff_component.tscn" id="7_xr2ry"]

[node name="BlackAP" type="Node2D" node_paths=PackedStringArray("health_component", "attack_component", "outfit_component", "score_component", "buff_component")]
script = ExtResource("1_wla5o")
health_component = NodePath("HealthComponent")
attack_component = NodePath("AttackComponent")
outfit_component = NodePath("OutfitComponent")
score_component = NodePath("ScoreComponent")
buff_component = NodePath("BuffComponent")

[node name="HealthComponent" parent="." instance=ExtResource("2_vl8vg")]
unique_name_in_owner = true
DEAFULT_MAX_HEALTH = 3

[node name="AttackComponent" parent="." instance=ExtResource("3_1lhjx")]
unique_name_in_owner = true
DEFAULT_ATK = 1
ATK_PATTERN = 5

[node name="OutfitComponent" parent="." instance=ExtResource("4_wb4rb")]
unique_name_in_owner = true
icon_texture = ExtResource("5_0h7fh")
frame = 2

[node name="ScoreComponent" parent="." instance=ExtResource("6_r8b17")]
unique_name_in_owner = true

[node name="BuffComponent" parent="." instance=ExtResource("7_xr2ry")]
unique_name_in_owner = true

[connection signal="on_hit" from="AttackComponent" to="." method="_on_attack_component_on_hit"]
